--- a/client/main.styl
+++ b/client/main.styl
@@ -15,7 +15,7 @@ nav
   display: flex
   justify-content: center
   align-items: center
-  background-color: #e6e5e5
+  background-color: #d6dcde  // .flexlayout__border_left
   padding: 3px 0
 
 .room-info
